--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,16 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+word="bottles"
+for beer_num in range(99, 0, -1):
+    print(beer_num, word, "on the wall.")
+    print(beer_num, word, "" "of beer.")
+    print("Take one down.")
+    print("pass it around.")
+if beer_num== 1:
+    print("No more bottle of beer on beer on the wall")
+else :
+    new_beer_num==beer_num-1
+    if new_beer_num==1:
+        word="bottle"
+        print(new_beer_num,word,"beer on the wall")
